# FileManager

./: .gitattributes  .gitignore  CZECH_TRANSLATION_VERIFICATION_FINAL.md  README.md  check_modified_files.ps1  czech_files_complete_list.txt  czech_verification_report.txt  find_additional_czech.ps1  find_czech_comments.ps1  find_czech_multiline.ps1  normalize.ps1  normalize_config.json  translate_iconlist.sh
.github/workflows/: auto-label-author.yml  pr-comments-guard.yml  pr-msbuild.yml  pr-squash-guard.yml
Instalator/: LICENSE  setup.inf  x64
Instalator/lang/: english.slg
src/: bugreprt.cpp  cache.cpp  callstk.cpp  callstk.h  cfgdlg.h  codetbl.cpp  codetbl.h  color.cpp  color.h  consts.h  debug_move.cpp  dialogs.cpp  dialogs.h  dialogs2.cpp  dialogs3.cpp  dialogs4.cpp  dialogs5.cpp  dialogs6.cpp  dialogse.cpp  dialogsp.cpp  drivelst.cpp  editwnd.cpp  editwnd.h  edtlbwnd.cpp  edtlbwnd.h  execlog.cpp  execlog.h  execute.cpp  execute.h  filesbox.h  filesbx1.cpp  filesbx2.cpp  filesmap.cpp  fileswn0.cpp  fileswn1.cpp  fileswn2.cpp  fileswn3.cpp  fileswn4.cpp  fileswn5.cpp  fileswn6.cpp  (+95 more)
src/common/: allochan.cpp  allochan.h  array.h  dib.cpp  dib.h  handles.cpp  handles.h  heap.cpp  heap.h  lstrfix.h  lstrfix.inc  messages.cpp  messages.h  moore.cpp  moore.h  multimon.cpp  regexp.cpp  regexp.h  sheets.cpp  sheets.h  str.cpp  str.h  strutils.cpp  strutils.h  (+4 more)
tools/: Create-Sfx.ps1  README.md  pyproject.toml
tools/comments/: code_guard.py  find_czech_words.py  translation_status.py  word_counter.py
tools/utfnames/: utfnames.cpp  utfnames.manifest  utfnames.vcxproj
(+741 files in other folders)
